--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,52 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<!-- Page content -->
+<div class="container d-flex flex-column">
+  <div class="row align-items-center justify-content-center no-gutters min-vh-100">
+    <div class="col-lg-5 col-md-8 py-8 py-xl-0">
+      <!-- Card -->
+      <div class="card shadow ">
+        <!-- Card body -->
+        <div class="card-body p-6">
+          <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          <div class="mb-4">
+            <!-- <a href="../index.html"><img src="/geeks-1.0.1/dist/assets/images/brand/logo/logo-icon.svg" class="mb-4" alt=""></a> -->
+            <h1 class="mb-1 font-weight-bold text-center" style="color: #2DAADB;">新規登録</h1>
+          </div>
+          <!-- Form -->
+          <form>
+            <div class="form-group">
+              <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "ユーザー名", class: "form-label"%>
+              <%= f.text_field :name, id: "fname", class: "form-control", placeholder: "50文字以内" %>
+            </div>
+              <!-- メールアドレス -->
+            <div class="form-group">
+              <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "メールアドレス", class: "form-label"%>
+              <%= f.email_field :email, class: "form-control", placeholder: "メールアドレス" %>
+            </div>
+              <!-- Password -->
+            <div class="form-group">
+            <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "パスワード", class: "form-label"%>
+              <%= f.password_field :password, autocomplete: "password", class: "form-control", placeholder: "6文字以上" %>
+            </div>
+            <div class="form-group">
+            <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "パスワードの確認", class: "form-label"%>
+              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "パスワードの確認", class: "form-control" %>
+            </div>
+              <!-- Checkbox -->
+            <div class="form-group text-center">
+              <span style="font-size: 13px"><a href="#!", style="color: #2DAADB;">利用規約</a>と<a href="#!", style="color: #2DAADB;">プライバシーポリシー</a>をご覧ください</span>
+            </div>
+            <div>
+              <!-- Button -->
+              <%= f.submit "上記同意のうえ無料会員登録する", class: "btn btn-success btn-block", style: "font-weight: bold;" %>
+            </div>
+            <div class="mt-3 text-center">
+              <span>アカウントをお持ちの方はこちら「<%= link_to "ログイン", new_user_session_path,data: {"turbolinks" => false}, style: "color: #2DAADB;"%> 」</span>
+            </div>
+          </form>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
