added image upload function

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,96 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+<!-- Page Content -->
+<div class="pt-5 pb-5">
+	<div class="container">
+		<!-- User info -->
+		<div class="row align-items-center">
+			<div class="col-xl-12 col-lg-12 col-md-12 col-12 d-none d-md-block">
+				<!-- Bg -->
+				<div class="pt-16 rounded-top" style="background-color: #87CEEB; no-repeat; background-size: cover;"></div>
+				<div class="d-flex align-items-end justify-content-between bg-white px-4 pt-2 pb-4 rounded-none rounded-bottom shadow-sm">
+					<div class="d-flex align-items-center">
+						<div class="mr-2 position-relative d-flex justify-content-end align-items-end mt-n5">
+              <% if @user.profile_image.present? %>
+                <%= image_tag @user.profile_image.url, class: "avatar-xl rounded-circle border-width-4 border-white" %>
+              <% else %>
+                <%= image_tag "profile_default_img_128.png", class: "avatar-xl rounded-circle border-width-4 border-white" %>
+              <% end %>
+						</div>
+						<div class="lh-1">
+							<h2 class="mb-0"><%= @user.name %></h2>
+              <li class="list-unstyled mb-2"><i class="fa fa-envelope nav-icon mr-2"></i><%= @user.email %></li>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+<!-- Content -->
+		<div class="row mt-4">
+			<%= render 'mypage/account_menu_mt-0' %>
+			<div class="col-lg-9 col-md-8 col-12">
+				<!-- Card -->
+				<div class="card">
+					<!-- Card header -->
+					<div class="card-header">
+						<h3 class="mb-0">プロフィール</h3>
+						<p class="mb-0">
+						</p>
+					</div>
+					<!-- Card body -->
+          <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true, method: :patch do |f| %>
+					<div class="card-body">
+						<div class="d-lg-flex align-items-center justify-content-between">
+							<div class="d-flex align-items-center mb-4 mb-lg-0">
+                <div class="profile ml-1 mt-2">
+                  <img id="profile-img-prev" src="#" class='hidden'/>
+                  <% if @user.profile_image.url.nil? %>
+                    <div class="img"><%= image_tag 'profile_default_img_128.png', style:"height: 100px; width: 100px; border-radius: 50%; object-fit: cover;" %></div>
+                  <% else %>
+                    <%= image_tag @user.profile_image.url, class: "profile-img", id: "profile-img", style:"height: 100px; width: 100px; border-radius: 50%; object-fit: cover;" %>
+                  <% end %>
+                  <div class="mt-4">
+                  <label class="profile-img-upload">
+                    <a class="btn btn-outline-success btn-sm text-nowrap">
+                      ファイルを選択
+                       <%= f.file_field :profile_image, id: "profile_image_upload", style: "display:none"%>
+                    </a>
+                  </label>
+                  </div>
+                </div>
+								<div class="ml-4">
+                  <div class="ml-3">
+                    <h3 class="mb-0">アイコン</h3>
+                    <p class="mb-0">アップロード画像（縦横200px×200px以上推奨、5MB未満）</p>
+                  </div>
+								</div>
+              </div>
+						</div>
+						<hr class="my-5" />
+						<div>
+							<h4 class="mb-0 text-center">基本情報</h4>
+							<p class="mb-4">
+							</p>
+							<!-- Form -->
+							<form class="form-row">
+								<!-- ユーザー名 -->
+								<div class="form-group col-12 col-md-6">
+                  <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "ユーザー名", class: "form-label"%>
+                  <%= f.text_field :name, id: "fname", class: "form-control", placeholder: "50文字以内" %>
+								</div>
+								<!-- メールアドレス -->
+								<div class="form-group col-12 col-md-12">
+                  <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "メールアドレス", class: "form-label"%>
+                  <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "メールアドレス" %>
+								</div>
+                <!-- Button -->
+								<div class="col-12 text-center">
+                  <%= f.submit "保存する", class: "btn btn-success btn-lg" %>
+								</div>
+							</form>
+						</div>
+					</div>
+          <% end %>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
