--- a/app/views/layouts/_libs_JS.html.erb
+++ b/app/views/layouts/_libs_JS.html.erb
@@ -1,7 +1,7 @@
 <!-- Scripts -->
 <!-- Libs JS -->
 <script src="/geeks-1.0.1/dist/assets/libs/jquery/dist/jquery.min.js"></script>
-  <!-- <script>
+  <script>
           $('.navbar-nav>li>a , .dropdown-menu>a').on('click', function(){
               if(this.id != 'navbarDropdown'){
                 $('.navbar-collapse').collapse('hide');
@@ -15,7 +15,7 @@
             }
             return true;
           });
-  </script> -->
+  </script>
 <script src="/geeks-1.0.1/dist/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/geeks-1.0.1/dist/assets/libs/odometer/odometer.min.js"></script>
 <script src="/geeks-1.0.1/dist/assets/libs/jquery-slimscroll/jquery.slimscroll.min.js"></script>
