--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,6 @@
           <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="mb-4">
-            <!-- <a href="../index.html"><img src="/geeks-1.0.1/dist/assets/images/brand/logo/logo-icon.svg" class="mb-4" alt=""></a> -->
             <h1 class="mb-1 font-weight-bold text-center" style="color: #2DAADB;">新規登録</h1>
           </div>
           <!-- Form -->
@@ -22,6 +21,23 @@
             <div class="form-group">
               <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "メールアドレス", class: "form-label"%>
               <%= f.email_field :email, class: "form-control", placeholder: "メールアドレス" %>
+            </div>
+            <div>
+              <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "性別", class: "form-label"%>
+              <div class="btn-group btn-group-toggle d-flex mb-3" data-toggle="buttons">
+                <label class="btn btn-light flex-fill mr-2 active">
+                  <%= f.radio_button :gender, :man, class: "form-check-input" %>
+                  <label class="form-check-label">男性</label>
+                </label>
+                <label class="btn btn-light flex-fill">
+                  <%= f.radio_button :gender, :woman, class: "form-check-input" %>
+                  <label class="form-check-label">女性</label>
+                </label>
+              </div>
+            </div>
+            <div class="form-group d-flex flex-column">
+              <div><span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "生年月日", class: "form-label"%></div>
+              <div><%= raw sprintf(f.date_select(:birth_date, with_css_classes:'year month day', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日' %></div>
             </div>
               <!-- Password -->
             <div class="form-group">
