--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,7 +56,9 @@
               <i class="far fa-id-badge nav-icon mr-2"></i>プロフィール編集
             </li>
             <li>
-              <i class="far fa-edit nav-icon mr-2"></i>あなたの経験
+              <%= link_to post_list_user_path(current_user),data: {"turbolinks" => false}, class: "dropdown-item" do %>
+                <i class="far fa-edit nav-icon mr-2"></i>あなたの投稿
+              <% end %>
             </li>
           </ul>
           <div class="dropdown-divider"></div>
@@ -91,7 +93,7 @@
       </form>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/posts" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">経験者を探す</span></a>
+          <a class="nav-link dropdown-toggle" href="/posts" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">Q&A一覧</span></a>
           <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDropdown">
             <div class="list-group">
               <p>カテゴリー</p>
@@ -101,7 +103,7 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/recruitments" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">経験者を募集</span></a>
+          <a class="nav-link dropdown-toggle" href="/posts/new" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">経験者に質問する</span></a>
         </li>
       </ul>
       <ul class="navbar-nav navbar-right-wrap ml-auto d-none d-lg-block">
@@ -168,9 +170,9 @@
 
                   </li>
                   <li class="nav-item">
-
-                      <i class="far fa-edit nav-icon mr-2"></i>あなたの経験
-
+                    <%= link_to post_list_user_path(current_user),data: {"turbolinks" => false}, class: "dropdown-item" do %>
+                      <i class="far fa-edit nav-icon mr-2"></i>あなたの投稿
+                    <% end %>
                   </li>
                   </ul>
                 </li>
