added post/index page

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -93,7 +93,7 @@
       </form>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/posts" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">Q&A一覧</span></a>
+          <a class="nav-link dropdown-toggle" href="/posts" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;">Q&A一覧</span></a>
           <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDropdown">
             <div class="list-group">
               <p>カテゴリー</p>
@@ -103,7 +103,7 @@
       </ul>
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/posts/new" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">経験者に質問する</span></a>
+          <a class="nav-link dropdown-toggle" href="/posts/new" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">質問する</span></a>
         </li>
       </ul>
       <ul class="navbar-nav navbar-right-wrap ml-auto d-none d-lg-block">
