--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -9,7 +9,7 @@
 				<div class="card">
 					<!-- Card header -->
 					<div class="card-header">
-						<h3 class="mb-0">投稿した質問を編集する</h3>
+						<h3 class="mb-0">質問を編集する</h3>
 						<p class="mb-0">
 						</p>
 					</div>
