--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,39 +7,87 @@
         <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-4">
           <div class="border-bottom pb-2 mb-4 d-lg-flex justify-content-between align-items-center">
             <div>
-              <h1 class="mb-0 h2">回答受付中のQ&A</h1>
+              <h1 class="mb-0 h2">Q&A一覧</h1>
             </div>
           </div>
-          <% if @post.present? %>
-            <% @post.each do |post| %>
-            <%= link_to post_path(post),data: {"turbolinks" => false}, class: "text-inherit" do %>
-              <div class="card mb-5">
-                <div class="card-body pt-2 pb-2">
-                  <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex align-items-center justify-content-between flex-column">
-                      <% if post.user.profile_image.present? %>
-                        <%= image_tag post.user.profile_image.url, class: "avatar-lg rounded-circle border-width-4 border-white" %>
-                        <%= post.user.name %>
-                      <% else %>
-                        <%= image_tag "profile_default_img_128.png", class: "avatar-lg rounded-circle border-width-4 border-white" %>
-                        <%= post.user.name %>
-                      <% end %>
-                    </div>
-                    <div class="ml-3 d-flex flex-column">
-                      <h4 class="mb-1" style="font-weight: bold;"><%= post.title %></h4>
-                      <p><%= post.content %></p>
-                    </div>
-                    <div style="margin-left: auto;">
-                      <% if post.post_image.present? %>
-                        <%= image_tag post.post_image.url, class: "img-fluid", style:"height: 100px; width: auto; object-fit: cover;"%>
-                      <% end %>
+          <ul class="nav nav-lb-tab mb-4" id="tab" role="tablist">
+            <li class="nav-item ml-0" role="presentation">
+              <a class="nav-link active font-size-s" style="font-weight: bold;" id="open-tab" data-toggle="pill" href="#open" role="tab"
+                aria-controls="open" aria-selected="true">回答受付中</a>
+            </li>
+            <li class="nav-item" role="presentation">
+              <a class="nav-link" style="font-weight: bold;" id="close-tab" data-toggle="pill" href="#close" role="tab"
+                aria-controls="close" aria-selected="false">解決済み<span class="text-muted font-size-xs"></span></a>
+            </li>
+          </ul>
+          <div class="tab-content" id="tabContent">
+            <div class="tab-pane fade show active" id="open" role="tabpanel" aria-labelledby="open-tab">
+              <% if @post_open.present? %>
+                <% @post_open.each do |post_open| %>
+                <%= link_to post_path(post_open),data: {"turbolinks" => false}, class: "text-inherit" do %>
+                  <div class="card mb-5">
+                    <div class="card-body pt-2 pb-2">
+                      <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center justify-content-between flex-column">
+                          <% if post_open.user.profile_image.present? %>
+                            <%= image_tag post_open.user.profile_image.url, class: "avatar-lg rounded-circle border-width-4 border-white" %>
+                            <%= post.user.name %>
+                          <% else %>
+                            <%= image_tag "profile_default_img_128.png", class: "avatar-lg rounded-circle border-width-4 border-white" %>
+                            <%= post_open.user.name %>
+                          <% end %>
+                        </div>
+                        <div class="ml-3 d-flex flex-column">
+                          <h4 class="mb-1" style="font-weight: bold;"><%= post_open.title %></h4>
+                          <p><%= post_open.content %></p>
+                        </div>
+                        <div style="margin-left: auto;">
+                          <% if post_open.post_image.present? %>
+                            <%= image_tag post_open.post_image.url, class: "img-fluid", style:"height: 100px; width: auto; object-fit: cover;"%>
+                          <% end %>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-              </div>
-            <% end %>
-            <% end %>
-          <% end %>
+                <% end %>
+                <% end %>
+              <% else %>
+              <P>受付中の質問はありません</p>
+              <% end %>
+            </div>
+            <div class="tab-pane fade" id="close" role="tabpanel" aria-labelledby="close-tab">
+              <% if @post_close.present? %>
+                <% @post_close.each do |post_close| %>
+                <%= link_to post_path(post_close),data: {"turbolinks" => false}, class: "text-inherit" do %>
+                  <div class="card mb-5">
+                    <div class="card-body pt-2 pb-2">
+                      <div class="d-flex align-items-center justify-content-between">
+                        <div class="d-flex align-items-center justify-content-between flex-column">
+                          <% if post_close.user.profile_image.present? %>
+                            <%= image_tag post_close.user.profile_image.url, class: "avatar-lg rounded-circle border-width-4 border-white" %>
+                            <%= post_close.user.name %>
+                          <% else %>
+                            <%= image_tag "profile_default_img_128.png", class: "avatar-lg rounded-circle border-width-4 border-white" %>
+                            <%= post_close.user.name %>
+                          <% end %>
+                        </div>
+                        <div class="ml-3 d-flex flex-column">
+                          <h4 class="mb-1" style="font-weight: bold;"><%= post_close.title %></h4>
+                          <p><%= post_close.content %></p>
+                        </div>
+                        <div style="margin-left: auto;">
+                          <% if post_close.post_image.present? %>
+                            <%= image_tag post_close.post_image.url, class: "img-fluid", style:"height: 100px; width: auto; object-fit: cover;"%>
+                          <% end %>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                <% end %>
+                <% end %>
+              <% end %>
+            </div>
+          </div>
         </div>
     </div>
   </div>
