--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -52,6 +52,32 @@
                     <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "経験者に質問したいことはなんですか？(500文字以内)", class: "form-label"%>
                     <%= f.text_area :content, autofocus: true, autocomplete: "experience", rows: "5", class: "form-control", placeholder: "(例)どのくらいの頻度で働いて平均月収どのくらいでしたか？" %>
                   </div>
+									<div class="form-group col-12 col-md-12">
+										<div class="actions">
+											<span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "カテゴリー", class: "form-label"%>
+											<select id="parent_category">
+												<% @parent_categories.each do |c| %>
+													<option value="<%= c.id %>"><%= c.name %></option>
+												<% end %>
+											</select>
+											<select id="post_category_ids" name="post[category_id]">
+												<% @default_child_categories.each do |c| %>
+													<option><%= c.name %></option>
+												<% end %>
+											</select>
+										</div>
+									</div>
+									<script type="text/javascript">
+										$(function() {
+											$('#parent_category').change(function() {
+												$.ajax({
+													url: "<%= dynamic_select_category_path %>",
+													type: 'GET',
+													data: { category_id: $('#parent_category').has('option:selected').val() }
+												});
+											});
+										});
+									</script>
                   <div>
                     <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "回答受付ステータス", class: "form-label"%>
                     <div class="btn-group btn-group-toggle d-flex mb-3" data-toggle="buttons">
