--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,16 +7,64 @@
             <h1 class="mb-0 h2">カテゴリー</h1>
           </div>
         </div>
-        <div class="card border-0">
+        <div class="card border-0 mb-4">
           <div class="card-header" style=" background-color: #DCF0F9;">
             <h4 class="mb-0">
-              <%= @kaden.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @kaden.id).count})"%></span>
+              <%= @parent_1.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_1.id).count})"%></span>
             </h4>
           </div>
           <div class="row">
-            <% @kaden.children.each do |children_category| %>
+            <% @parent_1.children.each do |children_category| %>
             <div class="col-md-2 col-3 text-center">
-              <div class="p-xl-3 p-lg-3 mb-3 mb-lg-0">
+              <div class="p-xl-3 p-lg-3 mt-1 mb-2 mb-lg-0">
+                <%= children_category.name %>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </div>
+        <div class="card border-0 mb-4">
+          <div class="card-header" style=" background-color: #DCF0F9;">
+            <h4 class="mb-0">
+              <%= @parent_2.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_2.id).count})"%></span>
+            </h4>
+          </div>
+          <div class="row">
+            <% @parent_2.children.each do |children_category| %>
+            <div class="col-md-2 col-3 text-center">
+              <div class="p-xl-2 p-lg-2 mt-1 mb-2 mb-lg-0">
+                <%= children_category.name %>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </div>
+        <div class="card border-0 mb-4">
+          <div class="card-header" style=" background-color: #DCF0F9;">
+            <h4 class="mb-0">
+              <%= @parent_3.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_3.id).count})"%></span>
+            </h4>
+          </div>
+          <div class="row">
+            <% @parent_3.children.each do |children_category| %>
+            <div class="col-md-2 col-3 text-center">
+              <div class="p-xl-2 p-lg-2 mt-1 mb-2 mb-lg-0">
+                <%= children_category.name %>
+              </div>
+            </div>
+            <% end %>
+          </div>
+        </div>
+        <div class="card border-0 mb-4">
+          <div class="card-header" style=" background-color: #DCF0F9;">
+            <h4 class="mb-0">
+              <%= @parent_4.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_4.id).count})"%></span>
+            </h4>
+          </div>
+          <div class="row">
+            <% @parent_4.children.each do |children_category| %>
+            <div class="col-md-2 col-3 text-center">
+              <div class="p-xl-2 p-lg-2 mb-3 mb-lg-0">
                 <%= children_category.name %>
               </div>
             </div>
