fixed dropdown menu

--- a/app/views/posts/dynamic_select_category.js.erb
+++ b/app/views/posts/dynamic_select_category.js.erb
@@ -1,1 +1,1 @@
-$('#post_category_ids').html('<%= j(options_for_select(@category.children.pluck(:name, :id))) %>');
+$('#post_category_id').html('<%= j(options_for_select(@category.children.pluck(:name, :id))) %>');
