--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -84,27 +84,14 @@
     </button>
     <!-- Collapse -->
     <div class="collapse navbar-collapse" id="navbar-default">
-      <form class="mt-3 mt-lg-0 d-flex align-items-center">
-
-        <span class="position-absolute pl-1 search-icon">
-          <i class="fe fe-search ml-2"></i>
-        </span>
-
-      </form>
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/posts" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;">Q&A一覧</span></a>
-          <div class="dropdown-menu dropdown-menu-md" aria-labelledby="navbarDropdown">
-            <div class="list-group">
-              <p>カテゴリー</p>
-            </div>
-          </div>
-        </li>
+        <a class="nav-link btn btn-success" style="border-radius: 40px;" href="/posts" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-lightbulb mr-1"></i>Q&A一覧</span></a>
       </ul>
       <ul class="navbar-nav">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="/posts/new" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="link-menu" style="font-weight: bold;">質問する</span></a>
-        </li>
+        <a class="nav-link btn btn-success ml-2" style="border-radius: 40px;" href="/categories" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="fe fe-search mr-1"></i>カテゴリ</span></a>
+      </ul>
+      <ul class="navbar-nav">
+        <a class="nav-link btn btn-outline-success ml-2" style="border-radius: 40px;" href="/posts/new" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-hand-paper mr-1"></i>質問する</span></a>
       </ul>
       <ul class="navbar-nav navbar-right-wrap ml-auto d-none d-lg-block">
         <% if user_signed_in?%>
@@ -139,24 +126,19 @@
                   <% end %>
                 </li>
                 <li>
-
-                    <i class="far fa-envelope mr-2"></i>メッセージ
-
+                  <%= link_to posts_path,data: {"turbolinks" => false}, class: "dropdown-item" do %>
+                    <i class="far fa-lightbulb mr-2"></i> Ｑ&Ａ一覧
+                  <% end %>
                 </li>
                 <li>
-
-                    <i class="far fa-heart mr-2"></i>フォローリスト
-
+                  <%= link_to categories_path,data: {"turbolinks" => false}, class: "dropdown-item" do %>
+                    <i class="fe fe-search mr-2"></i>カテゴリ
+                  <% end %>
                 </li>
                 <li>
-                  <
-                    <i class="fe fe-star mr-2"></i>お気に入りリスト
-
-                </li>
-                <li>
-
-                    <i class="far fa-clipboard mr-2"></i>購入履歴
-
+                  <%= link_to new_post_path,data: {"turbolinks" => false}, class: "dropdown-item" do %>
+                    <i class="far fa-hand-paper mr-2"></i>質問する
+                  <% end %>
                 </li>
                 <li class="dropdown p-1">
                   <a class="nav-item text-inherit" role="button" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -165,9 +147,9 @@
                   <div class="dropdown-menu dropdown-menu-right shadow" aria-labelledby="dropdownUser">
                   <ul class="list-unstyled">
                   <li class="nav-item">
-
+                    <%= link_to edit_user_registration_path(current_user),data: {"turbolinks" => false}, class: "dropdown-item" do %>
                       <i class="fas fa-user-edit nav-icon mr-2"></i>プロフィール編集
-
+                    <% end %>
                   </li>
                   <li class="nav-item">
                     <%= link_to post_list_user_path(current_user),data: {"turbolinks" => false}, class: "dropdown-item" do %>
