--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-3 col-lg-3 col-md-12 col-12 mt-md-15">
-
+        <%= render partial: 'search', locals: { search_word: @search_word } %>
       </div>
         <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-4">
           <div class="border-bottom pb-2 mb-4 d-lg-flex justify-content-between align-items-center">
