--- a/app/views/users/post_list.html.erb
+++ b/app/views/users/post_list.html.erb
@@ -36,6 +36,7 @@
                       <tr>
                         <th scope="col" class="border-0">Quation ID</th>
                         <th scope="col" class="border-0">タイトル</th>
+                        <th scope="col" class="border-0">カテゴリ</th>
                         <th scope="col" class="border-0">更新日</th>
                         <th scope="col" class="border-0"></th>
                       </tr>
@@ -49,6 +50,7 @@
                               <%= link_to post_list.title, post_path(post_list),data: {"turbolinks" => false}, class: "text-inherit" %>
                             </h5>
                           </td>
+                          <td class="align-middle border-top-0"><%= "#{post_list.category.root.name}/#{post_list.category.name}" %></td>
                           <td class="align-middle border-top-0"><%= post_list.updated_at.to_s(:datetime_jp)%></td>
                           <td><%= link_to "編集", edit_post_path(id: post_list.id),data: {"turbolinks" => false}, class: "btn btn-outline-success btn-sm"%></td>
                         </tr>
@@ -75,6 +77,7 @@
                       <tr>
                         <th scope="col" class="border-0">Quation ID</th>
                         <th scope="col" class="border-0">タイトル</th>
+                        <th scope="col" class="border-0">カテゴリ</th>
                         <th scope="col" class="border-0">更新日</th>
                         <th scope="col" class="border-0"></th>
                       </tr>
