--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -40,6 +40,16 @@
                         <div class="ml-3 d-flex flex-column">
                           <h4 class="mb-1" style="font-weight: bold;"><%= post_open.title %></h4>
                           <p><%= post_open.content %></p>
+                          <div id="like-icon-post-<%= post_open.id.to_s %>">
+                            <% if post_open.liked_by(current_user).present? %>
+                              <%= link_to "いいねを取り消す", post_like_path(post_open.id, post_open.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                            <% else %>
+                              <%= link_to "いいね", post_likes_path(post_open), method: :POST, remote: true, class: "love hide-text" %>
+                            <% end %>
+                          </div>
+                          <div id="like-text-post-<%= post_open.id.to_s %>">
+                            <%= render "like_text", { likes: post_open.likes } %>
+                          </div>
                         </div>
                         <div style="margin-left: auto;">
                           <% if post_open.post_image.present? %>
