--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,60 +2,41 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-4">
-        <div class="d-flex justify-content-betwee align-items-center">
-          <h2 class="font-weight-semi-bold mb-2"><%= @post.title %></h2>
-        </div>
-        <% if @post.post_image.present? %>
-        <div class="rounded-lg embed-responsive embed-responsive-16by9" style="height: auto;">
-          <%= image_tag "study-abroad.jpg", class: "embed-responsive-item"%>
-        </div>
-        <% end %>
-        <!-- Content -->
-          <!-- Card -->
           <div class="card mb-5">
-            <!-- Card body -->
             <div class="card-body">
-              <div class="d-flex align-items-center justify-content-between">
-                <% if @post.user.profile_image.present? %>
-                <%= image_tag @post.user.profile_image.url, class: "rounded-circle avatar-md" %>
-                <% else %>
-                <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md" %>
-                <% end %>
-                <div class="ml-2 lh-1">
-                  <h4 class="mb-1"><%= @post.user.name %></h4>
-                  <span class="ml-1 font-size-xs text-muted"><%= time_ago_in_words(@post.created_at) + "前" %></span>
-                </div>
-                <div style="margin-left: auto;">
-                  <% if not @post_favorite.present? %>
-                    <%= link_to post_favorites_path(@post.id),data: {"turbolinks" => false}, "data-toggle": :"tooltip", "data-original-title": :"お気に入りする", method: :post do %>
-                      <i class="fe fe-bookmark font-size-lg text-inherit"></i>
-                    <% end %>
+              <div class="d-flex align-items-center">
+                <div class="d-flex flex-column justify-content-between align-items-center mb-2">
+                  <% if @post.user.profile_image.present? %>
+                  <%= image_tag @post.user.profile_image.url, class: "rounded-circle avatar-md mb-2" %>
                   <% else %>
-                    <%= link_to post_favorite_path(post_id: @post, id: @post_favorite),data: {"turbolinks" => false}, "data-toggle": :"tooltip", "data-original-title": :"お気に入りを解除", method: :delete do %>
-                      <i class="fa fa-bookmark font-size-lg text-inherit"></i>
-                    <% end %>
+                  <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md mb-2" %>
                   <% end %>
+                  <div class="d-flex flex-column mb-2 text-center">
+                    <h4 class="mb-1"><%= @post.user.name %></h4>
+                    <span class="font-size-xs text-muted"><%= time_ago_in_words(@post.created_at) + "前" %></span>
+                  </div>
                 </div>
-              </div>
-
-              <div class="d-flex align-items-center justify-content-between mb-5">
-                <span>
-                  <li class="list-inline-item mr-3"><a data-toggle="tooltip" data-original-title="お気に入りされた数"><i class="mdi mdi-star text-warning mr-1"></i><%= @favorite_count %></a></li>
-                  <% if @post.category_ids.present? %>
-                    <% @post.categories.each do |category|%>
-                      <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= category.name %></li>
-                    <% end %>
+                <div class="ml-3 d-flex flex-column">
+                  <h4 class="mb-3" style="font-weight: bold;"><%= @post.title %></h4>
+                  <p class="mb-3" style="font-weight: bold;"><%= @post.content %></p>
+                  <% if @post.post_image.present? %>
+                    <%= image_tag @post.post_image.url, class: "img-fluid", style:"height: 200px; width: auto; object-fit: cover;"%>
                   <% end %>
-                </span>
-                <div style="margin-left: auto;">
-                  <% if user_signed_in? && @post.user_id != current_user.id %>
-                    <%= link_to "購入する", new_post_purchase_path(@post.id),data: {"turbolinks" => false}, class: "btn btn-success btn-sm text-nowrap", style: "font-weight: bold;" %>
-                  <% end %>
+                  <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{@post.category.root.name}/#{@post.category.name}" %></li>
+                  <div class="d-flex flex-row">
+                    <div class="mr-1 mt-1" id="like-icon-post-<%= @post.id.to_s %>">
+                      <% if @post.liked_by(current_user).present? %>
+                        <%= link_to "いいねを取り消す", post_like_path(@post.id, @post.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                      <% else %>
+                        <%= link_to "いいね", post_likes_path(@post), method: :POST, remote: true, class: "love hide-text" %>
+                      <% end %>
+                    </div>
+                    <div class="mt-1" id="like-text-post-<%= @post.id.to_s %>">
+                      <span style="font-weight: bold;"><%= @post.likes.count %></span>
+                    </div>
+                    <li class="list-inline-item"><i class="far fa-comment-alt ml-2 mt-2"></i></li>
+                  </div>
                 </div>
-              </div>
-              <div class="d-flex flex-column">
-                <li class="list-inline-item"><span class="mr-1">料金:</span><span><%= @post.display_price %></span></li>
-                <li class="list-inline-item mr-3"><span class="mr-1">形式:</span><span>ビデオ通話・チャットどちらも可</span></li>
               </div>
             </div>
             <!-- Nav tabs -->
@@ -91,7 +72,6 @@
                 <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
                   <div class="mb-4">
                     <h3 class="mb-2">経験の詳細</h3>
-                    <p><%= @post.detail %></p>
                   </div>
                   <h4 class="mb-3">What you’ll learn</h4>
                   <div class="row mb-3">
@@ -152,7 +132,7 @@
                 <div class="tab-pane fade" id="comment" role="tabpanel" aria-labelledby="comment-tab">
                   <div class="mb-2">
                     <!-- Content -->
-                    <h3 class="mb-4">コメント<span class="text-muted font-size-xs"><%= "( #{@comments.count} )" %></span></h3>
+                    <h3 class="mb-4">コメント<span class="text-muted font-size-xs"></span></h3>
                   </div>
                   <hr class="my-3" />
                   <div class="mb-3">
@@ -173,44 +153,33 @@
                         </form>
                       </div>
                     </div>
-                    <% @comments.each do |comment| %>
+
                     <div class="card-body border-bottom pb-4 mb-4">
                       <div class="d-flex align-items-center justify-content-between">
-                        <% if comment.user.profile_image.present? %>
-                          <%= image_tag comment.user.profile_image.url, class: "rounded-circle avatar-lg" %>
-                        <% else %>
-                          <%= image_tag 'profile_default_img_128', class:"rounded-circle avatar-lg" %>
-                        <% end %>
+
                         <div class="ml-2 lh-1">
-                          <h4 class="mb-1"><%= comment.user.name %></h4>
-                          <span class="ml-1 font-size-xs text-muted"><%= time_ago_in_words(comment.created_at) + "前" %></span>
+                          <h4 class="mb-1"></h4>
+                          <span class="ml-1 font-size-xs text-muted"></span>
                         </div>
                         <div style="margin-left: auto;">
-                          <% if user_signed_in? && current_user.id == comment.user.id %>
-                            <%= link_to post_comment_path(post_id: comment.post_id, id: comment.id),data: {"turbolinks" => false}, "data-toggle": :"tooltip", "data-original-title": :"コメントを削除する", method: :delete do %>
-                              <i class="far fa-trash-alt font-size-lg text-inherit"></i>
-                            <% end %>
-                          <% end %>
                         </div>
                       </div>
                       <div class="d-flex mb-5">
-                        <span><%= comment.comment %></span>
+                        <span></span>
                       </div>
                     </div>
-                  <% end %>
+
                   <div class="container">
-                    <%= form_with(model: [@post, Comment.new], local: true) do |f| %>
+
                       <div class="row">
                         <div class="form-group col-12 col-md-12">
-                          <%= f.label "コメント" %>
-                          <%= f.text_area :comment,  autofocus: true, autocomplete: "comment", class: "form-control", rows: "3" %>
-                          <%= f.hidden_field :post_id, value: @post.id %>
+
                         </div>
                         <div class="col-12 text-center">
-                          <%= f.submit "コメントする", class: "btn btn-success btn-lg" %>
+
                         </div>
                       </div>
-                    <% end %>
+
                   </div>
                 </div>
                 </div>
@@ -219,7 +188,7 @@
                     <!-- Card header -->
                     <div class="card-header" style="background-color: #fff;">
                       <h4 class="mb-0">
-                        掲載中のプラン <span class="text-muted font-size-xs"><%= "( #{@user.posts.count} )" %></span>
+                        掲載中のプラン <span class="text-muted font-size-xs"></span>
                       </h4>
                     </div>
                     <!-- Description -->
@@ -227,47 +196,47 @@
                       <!-- List group -->
                       <ul class="list-group list-group-flush">
                         <!-- List group item -->
-                        <% @user_posts.each do |user_posts| %>
+
                         <li class="list-group-item px-0 pb-3 pt-0">
                           <div class="d-flex align-items-center justify-content-between">
-                            <%= link_to post_path(id: user_posts),data: {"turbolinks" => false} do %>
+
                               <div class="d-lg-flex align-items-center">
                                 <div>
                                   <img src="/geeks-1.0.1/dist/assets/images/course/course-wordpress.jpg" alt="" class="rounded img-4by3-lg" />
                                 </div>
                                 <div class="ml-lg-3 mt-2 mt-lg-0">
                                   <h4 class="text-inherit">
-                                    <%= user_posts.title %>
+
                                   </h4>
                                   <ul class="list-inline font-size-xs mb-0 text-inherit">
                                     <li class="list-inline-item">
                                       <i class="mdi mdi-star text-warning mr-1"></i>
-                                      <%= user_posts.favorites.count %>
+
                                     </li>
                                     <li class="list-inline-item">
                                       <i class="fa fa-comments mr-1"></i>
                                       <span class="text-muted">
-                                        <%= user_posts.comments.count %>
+
                                       </span>
                                     </li>
                                     <li class="list-inline-item">
                                       <i class="fa fa-tags mr-1"></i>
-                                      <%= user_posts.experience %>
+
                                     </li>
                                   </ul>
                                 </div>
                               </div>
-                            <% end %>
+
                             <div>
                               <!-- Dropdown -->
                               <span class="dropdown dropleft">
                                 <i class="far fa-clock mr-1"></i>
-                                <%= time_ago_in_words(user_posts.created_at) + "前" %>
+
                               </span>
                             </div>
                           </div>
                         </li>
-                        <% end %>
+
                       </ul>
                     </div>
 
@@ -278,7 +247,7 @@
                     <h3 class="mb-3">自己紹介</h3>
                     <div class="mb-4">
                       <h4>xxx</h4>
-                      <p><%= @post.user.about_me %></p>
+                      <p></p>
                     </div>
                     <div class="mb-4">
                       <h4>
@@ -323,7 +292,7 @@
             </div>
           </div>
       </div>
-      <%= render partial: 'shared/post_sidebar', locals: { user: @user } %>
+
     </div>
   </div>
 </div>
