--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,11 +1,12 @@
 <div class="p-lg-5 py-5">
   <div class="container">
-    <div class="row">
-      <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-4">
+    <div class="row mt-4">
+      <%= render partial: 'mypage/account_menu_mt-0' %>
+      <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5">
         <div class="border-bottom pb-2 mb-4 d-lg-flex justify-content-between align-items-center">
           <div>
             <% if @post.status == "open" %>
-              <h1 class="mb-0 h2">ただいま回答受付中！</h1>
+              <h1 class="mb-0 h2">現在、回答受付中</h1>
             <% else %>
               <h1 class="mb-0 h2">回答受付は終了しました</h1>
             <% end %>
@@ -52,7 +53,7 @@
         <div class="card rounded-lg">
           <div class="card-body">
             <div class="mb-2 d-flex justify-content-between pb-2 mb-4 align-items-center" style="border-bottom: 2px solid #eae7f5">
-              <h2>回答<h2>
+              <h2>回答<%="(#{@post.answers.count})"%><h2>
               <%= link_to "経験者として回答する", new_post_answer_path(@post.id), class: "btn btn-success"%>
             </div>
             <% @answers.each do |answer| %>
