edited show page

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -79,7 +79,12 @@
 								<!-- メールアドレス -->
 								<div class="form-group col-12 col-md-12">
                   <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "メールアドレス", class: "form-label"%>
-                  <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "メールアドレス" %>
+                  <%= f.email_field :email, autocomplete: "email", class: "form-control", placeholder: "メールアドレス" %>
+								</div>
+								<!-- 自己紹介 -->
+								<div class="form-group col-12 col-md-12">
+									<span class="badge badge-light-secondary text-secondary mr-2">任意</span><%= f.label "自己紹介", class: "form-label"%>
+									<%= f.text_area :about_me, class: "form-control", placeholder: "自己紹介", rows: "10" %>
 								</div>
                 <!-- Button -->
 								<div class="col-12 text-center">
